Major changes in backend and frontend